# JFP

./: .gitignore  CMakeLists.txt  Makefile  README.md  jfp_config.h.in
JCS/: CMakeLists.txt  platformio.ini
JCS/include/: CMakeLists.txt  Constants.h  Matrix33.h  Quaternion.h  Vec3.h
JCS/src/: CMakeLists.txt  JCS.cpp  Matrix33.cpp  Quaternion.cpp
assets/: sabre_light_main.xml
assets/aircraft/c172p/: c172_init.xml  rocket_init.xml
assets/aircraft/sabre_light/: block_test.mtl  property_list.txt  rocket_init.xml  sabre_light-set.xml  sabre_light.ac  sabre_light.mtl  sabre_light.xml  sabre_light_3d_def.xml
assets/aircraft/sabre_light/src/: block_test.blend  block_test.blend1  sabre_light.blend  sabre_light.blend1  untitled.blend
assets/data_output/: socket.xml
assets/scripts/: rocket_flight.xml
docs/: component-design.wsd
src/: CMakeLists.txt  JFP.cpp
src/3d-viz/: CMakeLists.txt  Camera.cpp  Camera.h  CraftVisualizer.cpp  CraftVisualizer.h  Ground.h  ICameraProvider.h  IRenderTree.h  IRenderable.h  Line3D.cpp  Line3D.h  Mesh.h  Model3D.cpp  Model3D.h  Renderer.cpp  Renderer.h  Rocket3DWindow.cpp  Rocket3DWindow.h  Shader.cpp  Shader.h  ShaderBank.cpp  ShaderBank.h  Texture.h  Visualizer3D.cpp  Visualizer3D.h
src/3d-viz/renderables/: CMakeLists.txt  Ground.cpp  IRenderTree.h  IRenderable.h  Line3D.cpp  Line3D.h  Mesh.cpp  Mesh.h  Model3D.cpp  Model3D.h  Sphere.cpp  Sphere.h  Texture.cpp  Vertex.h
src/fdm_interface/: IFDM.h  JSBSimInterface.cpp  JSBSimInterface.h
src/network/: CMakeLists.txt  SocketOutput.cpp  SocketOutput.h  SocketOutput.hpp  SocketOutputFG.cpp  SocketOutputFG.h
src/shaders/: groundShader.frag  groundShader.vert  simple3DShader.frag  simple3DShader.vert  simpleObjShader.frag  simpleObjShader.vert
src/sim/: CMakeLists.txt  Craft.cpp  Craft.h  CraftConfig.h  FDMData.cpp  FDMData.h  FDMDataMapping.h  IFCS.h  IFDM.h  JCS_SITLInterface.cpp  JCS_SITLInterface.h  JSBSimInterface.cpp  JSBSimInterface.h  SimConfig.h  SimConfigParser.cpp  SimConfigParser.h
src/utils/: CMakeLists.txt  Constants.h  InputParser.cpp  InputParser.h
src/viz/: quick_plot.py  requirements.txt
src/xml/: CMakeLists.txt  JFPParser.cpp  JFPParser.h
